--- a/pySMSCMon/settings.cfg
+++ b/pySMSCMon/settings.cfg
@@ -2,28 +2,34 @@
 ssh_timeout = 10
 ssh_port = 22
 ip_or_hostname = 127.0.0.1
-folder = smsc$root:[monitor.out]
-username = smsc
-password = smsc
+folder = /data/XMAS2K13/datos
+username = fernandezjm
+password = Michu2013
 tunnel_port = 0
 
 [GATEWAY]
-username = t640958
-password = 26JFDEZC
-ip_or_hostname = 10.235.48.253
+ip_or_hostname = 127.0.0.1
 
 [MISC]
 calculations_file = calc.cnf
 
-[SMTFB]
-ip_or_hostname = 10.235.115.251
-cluster_id = smtfb
+#[SMTFZ]
+#ip_or_hostname = smtfz
+#tunnel_port = 20001
+#cluster_id = smtfz
+#username = smsc
 
 [SMTFC]
-ip_or_hostname = 10.230.73.220
-cluster_id = smtfc
+ip_or_hostname = 127.0.0.1
+cluster_id = _c1
+tunnel_port = 20002
+
+[SMTFA]
+ip_or_hostname = 127.0.0.1
+cluster_id = _a1
+tunnel_port = 20000
 
 [SMTFD]
-ip_or_hostname = 10.230.99.220
-cluster_id = smtfd
-
+ip_or_hostname = 127.0.0.1
+cluster_id = _d1
+tunnel_port = 20003
