--- a/pySMSCMon/settings.cfg
+++ b/pySMSCMon/settings.cfg
@@ -2,34 +2,22 @@
 ssh_timeout = 10
 ssh_port = 22
 ip_or_hostname = 127.0.0.1
-folder = /data/XMAS2K13/datos
-username = fernandezjm
-password = Michu2013
+folder = /data/test
+username = guest
+identity_file = key
 tunnel_port = 0
 
 [GATEWAY]
-ip_or_hostname = 127.0.0.1
+ip_or_hostname = 10.0.2.2
 
 [MISC]
 calculations_file = calc.cnf
 
-#[SMTFZ]
-#ip_or_hostname = smtfz
-#tunnel_port = 20001
-#cluster_id = smtfz
-#username = smsc
+[SYSTEM-1]
+cluster_id = _s1
 
-[SMTFC]
-ip_or_hostname = 127.0.0.1
-cluster_id = _c1
-tunnel_port = 20002
+[SYSTEM-2]
+cluster_id = _s2
 
-[SMTFA]
-ip_or_hostname = 127.0.0.1
-cluster_id = _a1
-tunnel_port = 20000
-
-[SMTFD]
-ip_or_hostname = 127.0.0.1
-cluster_id = _d1
-tunnel_port = 20003
+[SYSTEM-3]
+cluster_id = _s3
