--- a/pysmscmon/conf/settings.cfg
+++ b/pysmscmon/conf/settings.cfg
@@ -11,7 +11,10 @@ tunnel_port = 0
 ip_or_hostname = 10.0.2.2
 
 [MISC]
-calculations_file = calc.cnf
+calculations_file = calc.cfg
+graphs_definition_file = graphs_list.cfg
+smsc_log_cmd = @smsc$root:[monitor]log_mon_onscreen
+html_template = template.html
 
 [SYSTEM-1]
 cluster_id = _s1
