Add test functions, refactor smscmon. Test functions for smscmon and __init__ need to be adapted to reflect refactoring changes in methods

--- a/test/test_settings.cfg
+++ b/test/test_settings.cfg
@@ -2,9 +2,10 @@
 ssh_timeout = 10
 ssh_port = 22
 ip_or_hostname = 127.0.0.1
-folder = /data/virtualenv/pySMSCMon/test
 tunnel_port = 0
 password = 
+folder =
+username =
 
 [GATEWAY]
 ip_or_hostname = 127.0.0.1
@@ -15,7 +16,6 @@ calculations_file = calc.cnf
 [System_1]
 ip_or_hostname = 127.0.0.1
 cluster_id = test
-tunnel_port = 20002
 
 [System_2]
 ip_or_hostname = 127.0.0.1
