Last fixes and test functions added

--- a/test/test_settings.cfg
+++ b/test/test_settings.cfg
@@ -11,7 +11,7 @@ username =
 ip_or_hostname = 127.0.0.1
 
 [MISC]
-calculations_file = calc.cnf
+calculations_file = test_calc.cfg
 
 [System_1]
 ip_or_hostname = 127.0.0.1
