--- a/tox.ini
+++ b/tox.ini
@@ -8,4 +8,4 @@ deps=
     pytest-cov
     setuptools
     -rrequirements.txt
-commands=py.test --cov . --cov-report term
+commands=py.test --cov=. --cov-report=term
