Small refactor and test coverage improvement

--- a/pysmscmon/conf/settings.cfg
+++ b/pysmscmon/conf/settings.cfg
@@ -15,6 +15,8 @@ calculations_file = calc.cfg
 graphs_definition_file = graphs_list.cfg
 smsc_log_cmd = @smsc$root:[monitor]log_mon_onscreen
 html_template = template.html
+store_folder = store/
+reports_folder = reports/
 
 [SYSTEM-1]
 cluster_id = _s1
