--- a/test/test_settings_BAD.cfg
+++ b/test/test_settings_BAD.cfg
@@ -3,17 +3,17 @@ ssh_timeout = 10
 ssh_port = 22
 ip_or_hostname = 127.0.0.1
 tunnel_port = 0
-password =
-folder = /data/virtualenv/pySMSCMon/pysmscmon/test
+password = 
+folder =
 username =
 
 [GATEWAY]
 ip_or_hostname = 127.0.0.1
 
 [MISC]
-calculations_file = test_calc.cfg
-graphs_definition_file = test_graphs.cfg
-html_template = test_template.html
+calculations_file = test_badcalc.cfg
+graphs_definition_file = test_badgraphs.cfg
+html_template = test_badtemplate.html
 
 [System_1]
 ip_or_hostname = 127.0.0.1
@@ -21,4 +21,4 @@ cluster_id = test
 
 [System_2]
 ip_or_hostname = 127.0.0.1
-cluster_id = sys
+cluster_id = system2
