Unit tests working again...

--- a/test/test_settings.cfg
+++ b/test/test_settings.cfg
@@ -4,7 +4,7 @@ ssh_port = 22
 ip_or_hostname = 127.0.0.1
 tunnel_port = 0
 password =
-folder = /data/virtualenv/pySMSCMon/pysmscmon/test
+folder =
 username =
 
 [GATEWAY]
@@ -14,6 +14,8 @@ ip_or_hostname = 127.0.0.1
 calculations_file = test_calc.cfg
 graphs_definition_file = test_graphs.cfg
 html_template = test_template.html
+reports_folder = test_reports
+store_folder = test_store
 
 [System_1]
 ip_or_hostname = 127.0.0.1
