Add pytest-xdist and minor changes to avoid race conditions during testing in parallel, fully functional tests

--- a/tox.ini
+++ b/tox.ini
@@ -6,6 +6,7 @@ envlist = py27
 deps= 
     pytest
     pytest-cov
+    pytest-xdist
     setuptools
     -rrequirements.txt
-commands=py.test --cov=. --cov-report=term
+commands=py.test -n 4 --cov=. --cov-report=term
