--- a/t4mon/conf/settings.cfg
+++ b/t4mon/conf/settings.cfg
@@ -13,7 +13,7 @@ ip_or_hostname = 10.0.2.2
 [MISC]
 calculations_file = calc.cfg
 graphs_definition_file = graphs_list.cfg
-smsc_log_cmd = @smsc$root:[monitor]log_mon_onscreen
+remote_log_cmd = @smsc$root:[monitor]log_mon_onscreen
 html_template = template.html
 store_folder = store/
 reports_folder = reports/
