--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,11 @@
 language: python
 python:
-  - "2.7"
-# command to install dependencies
-install: "pip install -r requirements.txt"
-# command to run tests
-script: py.test
+  - 2.7
+install:
+  - pip install -r requirements.txt
+before_script:
+  - pip install coveralls
+script:
+  py.test --cov . --cov-report term-missing
+after_success:
+  coveralls
