--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,7 @@ install:
   - pip install -r requirements.txt
 before_script:
   - pip install coveralls
+  - pip install pytest-cov
 script:
   py.test --cov . --cov-report term-missing
 after_success:
