Move to `sshtunnel` package, with some fixes. Full refactor due to this

--- a/test/test_graphs.cfg
+++ b/test/test_graphs.cfg
@@ -1,15 +1,15 @@
-################################################################################
-#                                                                              #
-# Syntax (all lines starting with hash will be treated as comments):           #
-# var_names;title;plot_options                                                 #
-#                                                                              #
-# Where:                                                                       #
-# var_names:   list of partial variable names (* wildcard allowed) separated   #
-#              with commas                                                     #
-# title:       string containing graph's title                                 #
-# plot_option: comma-separated options passed transparently to matplotlib [opt]#
-#                                                                              #
-################################################################################
+###############################################################################
+#                                                                             #
+# Syntax (all lines starting with hash will be treated as comments):          #
+# var_names;title;plot_options                                                #
+#                                                                             #
+# Where:                                                                      #
+# var_names:   list of partial variable names (* wildcard allowed) separated  #
+#              with commas                                                    #
+# title:       string containing graph's title                                #
+# plot_option: [optional] comma-separated options passed transparently to     #
+#              matplotlib                                                     #
+###############################################################################
 
 
 # This is just a comment
