--- a/requirements.txt
+++ b/requirements.txt
@@ -4,7 +4,8 @@ matplotlib==1.4.3
 numpy==1.9.2
 pandas==0.15.2
 paramiko==1.15.2
+pyparsing==2.0.3
 python-dateutil==2.4.1
 pytz==2014.10
 six==1.9.0
-pyparsing==2.0.3
+sshtunnel==0.0.4.4
