Refactor DF consolidation

--- a/requirements-conda.txt
+++ b/requirements-conda.txt
@@ -16,4 +16,5 @@ python=2.7.9=1
 python-dateutil=2.4.2=py27_0
 pytz=2015.2=py27_0
 setuptools=15.2=py27_0
+sshtunnel=0.0.4.4=py27_0
 six=1.9.0=py27_0
