--- a/test/test_calc.cfg
+++ b/test/test_calc.cfg
@@ -7,16 +7,16 @@ Counter02_%BUFFER_FULL = (Counter02_message_BUFFERED + Counter02_ack_BUFFERED + 
 Counter03_%BUFFER_FULL = (Counter03_message_BUFFERED + Counter03_ack_BUFFERED + Counter03_message_RECEIVED) / 34575 * 100.0
 
 # Adding 1 to avoid dividing by zero
-Counter00_all_buffered = Counter00_message_FST_TX_OK + Counter00_message_TX_LINKLEVEL + Counter00_message_DELETED_FAIL + Counter00_TIMEUP + 1.0
-Counter01_all_buffered = Counter01_message_FST_TX_OK + Counter01_message_TX_LINKLEVEL + Counter01_message_DELETED_FAIL + Counter01_TIMEUP + 1.0
-Counter02_all_buffered = Counter02_message_FST_TX_OK + Counter02_message_TX_LINKLEVEL + Counter02_message_DELETED_FAIL + Counter02_TIMEUP + 1.0
-Counter03_all_buffered = Counter03_message_FST_TX_OK + Counter03_message_TX_LINKLEVEL + Counter03_message_DELETED_FAIL + Counter03_TIMEUP + 1.0
+Counter00_buffered_total = Counter00_nxt_mess + Counter00_message_TX_LINKLEVEL + Counter00_message_DELETED_FAILED + Counter00_TIMEUP + 1.0
+Counter01_buffered_total = Counter01_nxt_mess + Counter01_message_TX_LINKLEVEL + Counter01_message_DELETED_FAILED + Counter01_TIMEUP + 1.0
+Counter02_buffered_total = Counter02_nxt_mess + Counter02_message_TX_LINKLEVEL + Counter02_message_DELETED_FAILED + Counter02_TIMEUP + 1.0
+Counter0_3buffered_total = Counter03_nxt_mess + Counter03_message_TX_LINKLEVEL + Counter03_message_DELETED_FAILED + Counter03_TIMEUP + 1.0
 
 ; I could be yet another comment
 % or this way
 [even this is a comment]
 ! Let's stop with comments (lines starting with ;#!/%[)
-Counter00_avg_time_waiting = Counter00_LENGTH_message_CUMULATIVE / (Counter00_all_buffered * 300.0)
-Counter01_avg_time_waiting = Counter01_LENGTH_message_CUMULATIVE / (Counter01_all_buffered * 300.0)
-Counter02_avg_time_waiting = Counter02_LENGTH_message_CUMULATIVE / (Counter02_all_buffered * 300.0)
-Counter03_avg_time_waiting = Counter03_LENGTH_message_CUMULATIVE / (Counter03_all_buffered * 300.0)
+Counter00_sum_time_waiting = Counter00_LENGTH_message_CUMULATIVE / (Counter00_all_buffered * 300.0)
+Counter01_sum_time_waiting = Counter01_LENGTH_message_CUMULATIVE / (Counter01_all_buffered * 300.0)
+Counter02_sum_time_waiting = Counter02_LENGTH_message_CUMULATIVE / (Counter02_all_buffered * 300.0)
+Counter03_sum_time_waiting = Counter03_LENGTH_message_CUMULATIVE / (Counter03_all_buffered * 300.0)
