--- a/test/test_settings_BAD.cfg
+++ b/test/test_settings_BAD.cfg
@@ -18,7 +18,9 @@ html_template = test_badtemplate.html
 [System_1]
 ip_or_hostname = 127.0.0.1
 cluster_id = test
+tunnel_port = 20000
 
 [System_2]
 ip_or_hostname = 127.0.0.1
 cluster_id = system2
+tunnel_port = 20000
