--- a/requirements.txt
+++ b/requirements.txt
@@ -4,4 +4,5 @@ matplotlib==1.4.3
 pandas==0.15.2
 paramiko==1.15.2
 pyparsing==2.0.3
+tqdm
 -e git+https://github.com/fernandezcuesta/sshtunnel.git#egg=sshtunnel-0.0.4.5
