--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,6 @@
-cairocffi==0.6
-Jinja2==2.7.3
-matplotlib==1.4.3
-pandas==0.15.2
-paramiko==1.15.2
-pyparsing==2.0.3
+Jinja2>=2.7.3
+matplotlib>=1.4.3
+pandas>=0.15.2
+paramiko>=1.15.2
 tqdm
 -e git+https://github.com/fernandezcuesta/sshtunnel.git#egg=sshtunnel-0.0.4.5
