--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,2 @@
 cairocffi
-Jinja2>=2.7.3
-matplotlib>=1.4.3
-pandas>=0.15.2
-paramiko>=1.15.2
-tqdm
--e git+https://github.com/fernandezcuesta/sshtunnel.git#egg=sshtunnel-0.0.4.5
+-r requirements-common.txt
