--- a/t4mon/conf/settings.cfg
+++ b/t4mon/conf/settings.cfg
@@ -2,27 +2,34 @@
 ssh_timeout = 10
 ssh_port = 22
 ip_or_hostname = 127.0.0.1
-folder = /data/test
-username = guest
-identity_file = key
+folder = smsc$root:[monitor.out]
+username = smsc
+password = smsc
 tunnel_port = 0
+use_gateway = Yes
 
 [GATEWAY]
-ip_or_hostname = 10.0.2.2
+username = t640958
+password = 30JFDEZC
+ip_or_hostname = 10.235.48.253
 
 [MISC]
 calculations_file = calc.cfg
 graphs_definition_file = graphs_list.cfg
-remote_log_cmd = @smsc$root:[monitor]log_mon_onscreen
-html_template = template.html
-store_folder = store/
-reports_folder = reports/
+html_template = template_tlf.html
+smsc_log_cmd = @smsc$root:[monitor]log_mon_onscreen.com
 
-[SYSTEM-1]
-cluster_id = _s1
+[SMTFB]
+ip_or_hostname = 10.235.115.251
+cluster_id = smtfb
+tunnel_port = 29070
 
-[SYSTEM-2]
-cluster_id = _s2
+[SMTFC]
+ip_or_hostname = 10.230.73.220
+cluster_id = smtfc
+tunnel_port = 29071
 
-[SYSTEM-3]
-cluster_id = _s3
+[SMTFD]
+ip_or_hostname = 10.230.99.220
+cluster_id = smtfd
+tunnel_port = 29072
