Refactoring done, code and tests cleanup

--- a/.gitignore
+++ b/.gitignore
@@ -2,9 +2,6 @@
 *.*~
 *old*.*
 .covera*
-pysmscmon/store/*
-pysmscmon/reports/*
-pysmscmon/htmlcov/*
 *cache*
 *reports/
 *store/
@@ -17,17 +14,10 @@ man/
 *sublime-*
 .*spyder*
 *.dat
-favicon.ico
-*tlf*
-*TLF*
-docs/*.png
-docs/log_howto*
-*prueba*
-*_example*.py
+docs/cust/
 *.swp
 id_rsa*
 *egg*
-test_local/
 build/
 dist/
 .tox/
