--- a/test/test_calc.cfg
+++ b/test/test_calc.cfg
@@ -12,11 +12,7 @@ Counter01_buffered_total = Counter01_nxt_mess + Counter01_message_TX_LINKLEVEL +
 Counter02_buffered_total = Counter02_nxt_mess + Counter02_message_TX_LINKLEVEL + Counter02_message_DELETED_FAILED + Counter02_TIMEUP + 1.0
 Counter0_3buffered_total = Counter03_nxt_mess + Counter03_message_TX_LINKLEVEL + Counter03_message_DELETED_FAILED + Counter03_TIMEUP + 1.0
 
-; I could be yet another comment
-% or this way
-[even this is a comment]
-! Let's stop with comments (lines starting with ;#!/%[)
 Counter00_sum_time_waiting = Counter00_LENGTH_message_CUMULATIVE / (Counter00_all_buffered * 300.0)
 Counter01_sum_time_waiting = Counter01_LENGTH_message_CUMULATIVE / (Counter01_all_buffered * 300.0)
-Counter02_sum_time_waiting = Counter02_LENGTH_message_CUMULATIVE / (Counter02_all_buffered * 300.0)
-Counter03_sum_time_waiting = Counter03_LENGTH_message_CUMULATIVE / (Counter03_all_buffered * 300.0)
+Counter02_sum_time_waiting = Counter02_LENGTH_message_CUMULATIVE / (Counter02_all_buffered * 300.0)  # Forgot about inline comments...
+Counter03_sum_time_waiting = Counter03_LENGTH_message_CUMULATIVE / (Counter03_all_buffered * 300.0)  ; this is an inline comment too
