--- a/test/test_graphs.cfg
+++ b/test/test_graphs.cfg
@@ -12,9 +12,9 @@
 ###############################################################################
 
 
-# This is just a comment
+# This is just a comment; no inline comments allowed
 message_buffered;Test 1
-successful_FDA;Test 2 (percentage);ylim=(0.0,100.0)
+successful_FDA;Test 2 (percentage);ylim=(0.0,100.0),linewidth=2
 length_message_cumulative;Test3
 
 # Yet another comment
