--- a/requirements-common.txt
+++ b/requirements-common.txt
@@ -3,5 +3,5 @@ matplotlib>=1.4.3
 pandas>=0.15.2
 paramiko>=1.15.2
 tqdm
--e git+https://github.com/fernandezcuesta/sshtunnel.git#egg=sshtunnel-0.0.4.5
+-e git+https://github.com/fernandezcuesta/sshtunnel.git@devel#egg=sshtunnel-0.0.4.5
 -e git+https://github.com/uqfoundation/pathos.git#egg=pathos-0.2a1.dev0
