Remote file list cache added, add get_datetag function (and test) to collector class, gen_plot refactor (now only uses pandas and allows different file formats)

--- a/tox.ini
+++ b/tox.ini
@@ -9,4 +9,4 @@ deps=
     pytest-xdist
     setuptools
     -rrequirements.txt
-commands=py.test -n 4 --cov=. --cov-report=term
+commands=py.test -rXx -n 4 --cov=. --cov-report=term
