--- a/tox.ini
+++ b/tox.ini
@@ -1,12 +1,24 @@
+# Tox (http://tox.testrun.org/) is a tool for running tests
+# in multiple virtualenvs. This configuration file will run the
+# test suite on all supported python versions. To use it, "pip install tox"
+# and then run "tox" from this directory.
+
+[flake8]
+ignore = E402,F401
+exclude = *draft*
+
 [tox]
-envlist = py27
-#,py34
+envlist = py35
+
 [testenv]
-#changedir=t4mon
-deps= 
+commands = 
+    flake8 t4mon
+    flake8 test
+    py.test -rXx -n4 --cov t4mon --cov-report term-missing -x
+deps =
+    flake8
+    mock
     pytest
     pytest-cov
     pytest-xdist
-    setuptools
     -rrequirements.txt
-commands=py.test -rXx -n 4 --cov=. --cov-report=term
