--- a/tox.ini
+++ b/tox.ini
@@ -8,13 +8,12 @@ ignore = E402,F401
 exclude = *draft*
 
 [tox]
-envlist = py35
+envlist = py{27,35}
 
 [testenv]
-commands = 
-    flake8 t4mon
-    flake8 test
-    py.test -rXx -n4 --cov t4mon --cov-report term-missing -x
+basepython =
+    py27: python2.7
+    py35: python3.5
 deps =
     flake8
     mock
@@ -22,3 +21,7 @@ deps =
     pytest-cov
     pytest-xdist
     -rrequirements.txt
+commands = 
+    flake8 t4mon
+    flake8 test
+    py.test -rXx -n4 --cov t4mon --cov-report term-missing -x --durations=10
