--- a/tox.ini
+++ b/tox.ini
@@ -8,11 +8,13 @@ ignore = E402,F401
 exclude = *draft*
 
 [tox]
-envlist = py{27,35}
+envlist = py{27,33,34,35}
 
 [testenv]
 basepython =
     py27: python2.7
+    py33: python3.3
+    py34: python3.4
     py35: python3.5
 deps =
     flake8
@@ -24,4 +26,4 @@ deps =
 commands = 
     flake8 t4mon
     flake8 test
-    py.test -rXx -n4 --cov t4mon --cov-report term-missing -x --durations=10
+    py.test -rXx -n4 --cov t4mon --cov-report term-missing --durations=10
