--- a/requirements-conda.txt
+++ b/requirements-conda.txt
@@ -2,8 +2,7 @@
 # $ conda create --name <env> --file <this file>
 # platform: win-32
 jinja2>=2.7
-matplotlib==1.4.3
-numpy>=1.9.2
-pandas>=0.15, <0.17.1
+matplotlib>=1.4.3
+pandas>=0.15
 paramiko>=1.15
 pip
