Add isort and sphinx-build to tox

--- a/tox.ini
+++ b/tox.ini
@@ -8,7 +8,8 @@ ignore = E402,F401
 exclude = *draft*
 
 [tox]
-envlist = py{27,33,34,35}
+envlist =
+    flake8,isort,py{27,33,34,35},docs
 
 [testenv]
 basepython =
@@ -17,13 +18,43 @@ basepython =
     py34: python3.4
     py35: python3.5
 deps =
-    flake8
     mock
     pytest
     pytest-cov
     pytest-xdist
     -rrequirements.txt
 commands = 
+    py.test -rXx -n4 \
+        --cov t4mon --cov-report term-missing \
+        --durations=10 \
+        --basetemp={envtmpdir}
+
+[testenv:flake8]
+skip_install = True
+basepython =
+    python
+deps=
+    flake8
+commands =
     flake8 t4mon
     flake8 test
-    py.test -rXx -n4 --cov t4mon --cov-report term-missing --durations=10
+
+[testenv:isort]
+skip_install = True
+basepython =
+    python
+deps =
+    isort
+commands =
+    isort -rc -c t4mon test
+
+[testenv:docs]
+usedevelop = True
+basepython =
+    python
+deps =
+    sphinx
+    sphinxcontrib-napoleon
+    -rrequirements.txt
+commands =
+    sphinx-build -b html {toxinidir}/docs {toxinidir}/docs/_build/html
