--- a/tox.ini
+++ b/tox.ini
@@ -5,7 +5,7 @@
 
 [flake8]
 ignore = E402,F401
-exclude = *draft*
+exclude = *draft*, _version.py
 
 [tox]
 envlist =
@@ -17,15 +17,17 @@ basepython =
     py33: python3.3
     py34: python3.4
     py35: python3.5
+install_command = pip install -U {opts} {packages}
+setenv = TOX_ENV_NAME={envname}
+passenv = TOX_*
 deps =
-    mock
-    pytest
-    pytest-cov
-    pytest-xdist
-    -rrequirements.txt
+    -r{toxinidir}/requirements.txt
+    -r{toxinidir}/requirements-test.txt
 commands = 
-    py.test -rXx -n4 \
+    python -V
+    py.test test -rXx -n4 \
         --cov t4mon --cov-report term-missing \
+        --timeout=30 \
         --durations=10 \
         --basetemp={envtmpdir}
 
@@ -40,6 +42,7 @@ commands =
     flake8 test
 
 [testenv:isort]
+skipsdist = True
 skip_install = True
 basepython =
     python
