--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,7 @@
 language: python
 install:
-  - pip install -r requirements.txt
   - pip install -r requirements-test.txt
-  - pip install coveralls versioneer
+  - pip install coveralls
 python:
   - "2.7"
   - "3.3"
