--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,7 @@ language: python
 install:
   - pip install -r requirements-test.txt
   - pip install coveralls
+  - pip install sphinx{,contrib-napoleon}
 python:
   - "2.7"
   - "3.3"
@@ -13,6 +14,7 @@ before_install:
   - isort -rc t4mon test
 script:
   - py.test -rXx -n4 --cov t4mon --cov-report term-missing --timeout=30 --durations=10
+after_script:
+  - sphinx-build -b html docs docs/_build/html  
 after_success:
-  sphinx-build -b html docs docs/_build/html
-  coveralls
+  - coveralls
