--- a/tox.ini
+++ b/tox.ini
@@ -21,7 +21,7 @@ install_command = pip install -U {opts} {packages}
 setenv = TOX_ENV_NAME={envname}
 passenv = TOX_*
 deps =
-    -r{toxinidir}/requirements-test.txt
+    -r{toxinidir}/requirements/requirements-test.txt
 commands = 
     python -V
     py.test test -rXx -n4 \
@@ -57,6 +57,6 @@ basepython =
 deps =
     sphinx
     sphinxcontrib-napoleon
-    -rrequirements.txt
+    -r{toxinidir}/requirements/requirements.txt
 commands =
     sphinx-build -b html {toxinidir}/docs {toxinidir}/docs/_build/html
