--- a/.travis.yml
+++ b/.travis.yml
@@ -2,14 +2,13 @@ language: python
 install:
   - pip install -r requirements/requirements-test.txt
   - pip install coveralls
-  - pip install sphinx{,contrib-napoleon}
 python:
   - "2.7"
   - "3.3"
   - "3.4"
   - "3.5"
 before_install:
-  - pip install flake8 isort
+  - pip install flake8 isort sphinx{,contrib-napoleon}
   - flake8 t4mon test
   - isort -rc t4mon test
   - sphinx-build -b html docs docs/_build/html  
