--- a/.travis.yml
+++ b/.travis.yml
@@ -1,18 +1,18 @@
 language: python
 install:
   - pip install -r requirements/requirements-test.txt
-  - pip install coveralls
+  - pip install coveralls sphinx{,contrib-napoleon}
 python:
   - "2.7"
   - "3.3"
   - "3.4"
   - "3.5"
 before_install:
-  - pip install flake8 isort sphinx{,contrib-napoleon}
+  - pip install flake8 isort 
   - flake8 t4mon test
   - isort -rc t4mon test
-  - sphinx-build -b html docs docs/_build/html  
 script:
   - py.test -rXx -n4 --cov t4mon --cov-report term-missing --timeout=30 --durations=10
+  - sphinx-build -b html docs docs/_build/html
 after_success:
   coveralls
