Avoid non-local images in documentation being trated as errors

--- a/tox.ini
+++ b/tox.ini
@@ -55,8 +55,6 @@ usedevelop = True
 basepython =
     python
 deps =
-    sphinx
-    sphinxcontrib-napoleon
-    -r{toxinidir}/requirements/requirements.txt
+    -r{toxinidir}/requirements/requirements-doc.txt
 commands =
-    sphinx-build -b html {toxinidir}/docs {toxinidir}/docs/_build/html
+    sphinx-build -WavE -b html {toxinidir}/docs {toxinidir}/docs/_build/html
