Fix fallback config issue on py2

--- a/test/test_settings.cfg
+++ b/test/test_settings.cfg
@@ -6,6 +6,7 @@ tunnel_port = 0
 password =
 folder =
 username =
+use_gateway = Yes
 
 [GATEWAY]
 ip_or_hostname = 127.0.0.1
@@ -16,6 +17,7 @@ graphs_definition_file = test_graphs.cfg
 html_template = test_template.html
 reports_folder = test_reports
 store_folder = test_store
+remote_log_cmd =
 
 [System_1]
 ip_or_hostname = 127.0.0.1
