--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -3,5 +3,6 @@ include *.rst
 include *.md
 include requirements/*
 include test/*
-include docs/*include versioneer.py
+include docs/*
+include versioneer.py
 include t4mon/_version.py
