Changed the way remote dirs are fetched to a less flexible yet way faster

--- a/tox.ini
+++ b/tox.ini
@@ -24,7 +24,7 @@ deps =
     -r{toxinidir}/requirements/requirements-test.txt
 commands = 
     python -V
-    py.test test -rXx -n4 \
+    py.test test -rXxs -n4 \
         --cov t4mon --cov-report term-missing \
         --timeout=30 \
         --durations=10 \
